--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-package:
-    runs-on: macos-latest
+    runs-on: macos-13
     defaults:
       run:
         shell: bash -l {0}
