--- a/.github/workflows/log_metrics.yml
+++ b/.github/workflows/log_metrics.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   log-metrics:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
@@ -15,6 +15,9 @@ jobs:
           fetch-depth: 1
 
       - name: Log Metrics
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '14.3.1'
         run: |
           swift run Metrics \
               streckenagent \
