--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -19,6 +19,9 @@ jobs:
           fetch-depth: 5
 
       - name: Build Package
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '14.3.1'
         run: |
           swift run Metrics \
               streckenagent \
