--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -18,10 +18,12 @@ jobs:
         with:
           fetch-depth: 5
 
-      - name: Build Package
+      - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '14.3.1'
+
+      - name: Build Package
         run: |
           swift run Metrics \
               streckenagent \
