--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -25,8 +25,4 @@ jobs:
 
       - name: Build Package
         run: |
-          swift run Metrics \
-              streckenagent \
-              2023-06-13T15:38:08Z \
-              success \
-              2023-06-13T15:42:08Z
+          swift build
