--- a/.github/workflows/log_metrics.yml
+++ b/.github/workflows/log_metrics.yml
@@ -14,10 +14,12 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Log Metrics
+      - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '14.3.1'
+
+      - name: Log Metrics
         run: |
           swift run Metrics \
               streckenagent \
