--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -24,3 +24,6 @@ jobs:
         run: |
           export LANG=en_US.UTF-8
           xcodebuild -scheme DummyApp -configuration Debug -sdk 'iphonesimulator16.2'
+
+      - name: Get job infos
+        uses: ./.github/workflows/get_job_infos.yml
