--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -26,6 +26,7 @@ jobs:
           xcodebuild -scheme DummyApp -configuration Debug -sdk 'iphonesimulator16.2'
 
   get-job-infos:
+    needs: deploy-flavor
     uses: ./.github/workflows/get_job_infos.yml
     with:
       run_id: ${{ github.run_id }}
