fixing accessing json data

--- a/.github/workflows/get_job_infos.yml
+++ b/.github/workflows/get_job_infos.yml
@@ -31,5 +31,7 @@ jobs:
             sudo yum install -y jq
           fi
 
-          echo ${{ fromJson(steps.get_jobs.outputs.data) }}
-          echo ${{ fromJson(steps.get_jobs.outputs.data) }} | jq '. | select(.status == "completed") | select(.name == "Build App") | {started_at}'
+          echo ${{ steps.get_jobs.outputs }}
+          echo ${{ steps.get_jobs.outputs.data }}
+          echo ${{ toJSON(steps.get_jobs.outputs.data) }}
+          echo ${{ toJSON(steps.get_jobs.outputs.data) }} | jq '. | select(.status == "completed") | select(.name == "Build App") | {started_at}'
